--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   flutter_calendar_week: ^3.0.2
   calendar_date_picker2: ^0.3.3
+  flutter_switch: ^0.3.2
 
 dev_dependencies:
   flutter_test:
