--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   camera: ^0.11.0
   #location:
   fluttertoast: ^8.2.6
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
