--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,11 +42,13 @@ dependencies:
   permission_handler: ^11.1.0
   path_provider: ^2.1.3
   camera: ^0.11.0
-  #location:
   fluttertoast: ^8.2.6
   shared_preferences: ^2.3.1
   image_picker: ^1.1.2
   intl: ^0.18.0
+  url_launcher: ^6.1.8
+  google_sign_in: ^6.2.1
+
 
 dev_dependencies:
   flutter_test:
